--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,9 +1,14 @@
 /* FOOTER */
   .footer {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    flex-wrap: wrap;
+    // align-items: center;
+    text-align: center;
+
+    @media screen and (min-width: 1200px) {
+      text-align: start;
+    }
+
     padding-top: 60px;
     padding-bottom: 60px;
 
@@ -12,18 +17,53 @@
     }
   }
 
-  .footer__left-part {
+  .footer__item {
     max-width: 100%;
+    margin-bottom: 60px;
+
+    &:nth-last-child(-n+1){
+      margin-bottom: 0;
+
+      display: flex;
+      flex-direction: column;
+    }
+    
+    @media screen and (max-width: 767px) {
+      width: 100%;
+    
+      &:nth-child(n) {
+        margin-right: 0px;
+      }
+      &:nth-last-child(-n+1) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+    
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+      &:nth-last-child(-n+2) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 60px) / 3);
+    
+      &:last-child {
+        margin-right: 0px;
+      }
+    }
   }
   .footer-contacts {
     margin-top: 20px;
   }
   .footer-contacts__list {
     padding-inline-start: 0;
-    margin-top: 20px;
   }
   .footer-contacts__item {
-    margin-bottom: 9px;
+    margin-bottom: 8px;
   
     color: $additional-color;
   
@@ -32,15 +72,20 @@
     font-size: 14px;
     line-height: 1.71;
 
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 9px;
+      }
     &:last-child {
-      // margin-bottom: 0px;
+      margin-bottom: 0px;
     }
+
+
   }
   .footer-contacts__link {
     color: $second-additional-color;
   }
   
-  .footer__сenter-part {
+  .footer__second-part {
     // margin-left: 70px;
     // margin-right: 93px;
     // width: 206px;
@@ -55,7 +100,7 @@
     fill: $additional-color;
   }
   
-  .footer__right-part {
+  .footer__third-part {
     // display: flex;
     // flex-direction: column;
   }
@@ -68,8 +113,12 @@
     padding-right: 16px;
     padding-bottom: 15px;
     padding-left: 16px;
-    // width: 358px;
-    // height: 50px;
+    height: 50px;
+    width: 450px;
+    
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+    }
   
     color: $additional-color;
     background-color: $footer-color;
