--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,51 +3,75 @@
     background-color: $section-bg-color;
   }
   .team__title {
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 50px;
-    margin-left: 0;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
   }
   .team__main-info {
     padding-top: 30px;
-    padding-bottom: 30px;
-    margin: 0;
+    padding-bottom: 24px;
+
+    @media screen and (min-width: 1200px) {
+      padding-bottom: 30px;
+    }
   }
   .team-list {
-    // display: flex;
-    // flex-wrap: wrap;
-    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
     padding-inline-start: 0;
   }
   .team-list__item {
-    display: block;
-    // width: calc((100% - 90px) / 4);
     margin-right: 30px;
+    margin-bottom: 30px;
     overflow: hidden;
   
     text-align: center;
     background-color: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+    border-radius: 4px;
 
-    // &:last-child {
-    //   margin-right: 0px;
-    // }
+    @media screen and (max-width: 767px) {
+      width: 100%;
+    
+      &:nth-child(n) {
+        margin-right: 0px;
+      }
+      &:nth-last-child(-n+1) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+    
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+      &:nth-last-child(-n+2) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 90px) / 4);
+      margin-bottom: 0;
+    
+      &:last-child {
+        margin-right: 0px;
+      }
+    }
   }
   .team-list__name {
-    margin: 0;
-  
+    margin-bottom: 10px;
+
     font-weight: 500;
     font-size: 16px;
     text-transform: none; 
   }
   .team-list__speciality {
-    margin-top: 10px;
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-
+    margin-bottom: 16px;
+   
     font-weight: 400;
     font-size: 16px; 
   }
