--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -5,6 +5,10 @@ body {
   
     font-family: $main-font;
     letter-spacing: 0.03em;
+
+    &.modal-open {
+      overflow: hidden;
+    }
 }
 
   h2 {
