--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,11 +2,12 @@
   .footer {
     display: flex;
     flex-wrap: wrap;
-    // align-items: center;
+    align-items:flex-start;
     text-align: center;
 
     @media screen and (min-width: 1200px) {
       text-align: start;
+      align-items: baseline;
     }
 
     padding-top: 60px;
@@ -23,9 +24,6 @@
 
     &:nth-last-child(-n+1){
       margin-bottom: 0;
-
-      display: flex;
-      flex-direction: column;
     }
     
     @media screen and (max-width: 767px) {
@@ -85,11 +83,7 @@
     color: $second-additional-color;
   }
   
-  .footer__second-part {
-    // margin-left: 70px;
-    // margin-right: 93px;
-    // width: 206px;
-  }
+ 
   .footer__invitation {
     color: $additional-color;
     margin-bottom: 20px;
@@ -100,15 +94,16 @@
     fill: $additional-color;
   }
   
-  .footer__third-part {
-    // display: flex;
-    // flex-direction: column;
-  }
   .form-submit {
-    // display: flex;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    @media screen and (min-width: 1200px) {
+      flex-direction: row;
+    }
   }
   .form-submit__input {
-    // margin-right: 12px;
     padding-top: 15px;
     padding-right: 16px;
     padding-bottom: 15px;
@@ -118,6 +113,7 @@
     
     @media screen and (min-width: 1200px) {
       width: 358px;
+      margin-right: 12px;
     }
   
     color: $additional-color;
@@ -148,6 +144,9 @@
     padding-right: 28px;
     padding-bottom: 10px;
     padding-left: 29px;
+    margin-top: 20px;
+    width: 200px;
+
   
     background-color: $accent-color;
     color: $additional-color;
