--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,13 +9,14 @@
     line-height: 1.16;
 
     @media screen and (min-width: 1200px) {
+      font-family: $logo-font;
       font-size: 26px;
       line-height: 1.19;
     }
 
     &--bottom {
       margin-bottom: 20px;
-      
+
       color: $additional-color;
     }
 
@@ -25,24 +26,72 @@
   }
   
   //* Site nav */
-  .navigation {
+  .menu-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding-top: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid rgb(236, 236, 236);
+
+    @media screen and (min-width: 768px) {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
 
     @media screen and (min-width: 1200px) {
       padding-top: 24px;
       padding-bottom: 24px;
     }
   }
+  .menu-button{
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+
+    & .icon-close {
+      display: none;
+    }
+
+    &.is-open .icon-close {
+      display: block;
+    }
+    &.is-open .icon-menu {
+      display: none;
+    }
+    &:hover, &:focus {
+      color: $accent-color;
+      --color4: $accent-color;
+      fill: $accent-color;
+    }
+    
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+  }
+  .navigation-adaptive {
+    display: none;
+    align-items: center;
+    
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
   .site-nav {
-    // display: flex;
-    // margin-left: 93px;
+    display: flex;
+    margin-left: 88px;
+    margin-right: 84px;
+    
+    @media screen and (min-width: 1200px){
+      margin-left: 93px;
+      margin-right: 305px;     
+    }
   }
   .site-nav__item {
-    // margin-right: 50px;
+    margin-right: 50px;
 
     &:last-child {
       margin-right: 0px;
@@ -57,8 +106,19 @@
   
     font-family: $main-font;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 18px;
+    line-height: 1.16;
+
+    @media screen and (min-width: 768px){
+      font-family: $main-font;
+      font-size: 14px;
+      line-height: 1.14;    
+    }
+    @media screen and (min-width: 1200px){
+      font-family: $main-font;
+      font-size: 14px;
+      line-height: 1.14;    
+    }
     letter-spacing: 0.02em;
   
     @include trans-func(250ms);
@@ -75,7 +135,7 @@
       content: "";
       position: absolute;
       left: 0;
-      bottom: 0.5px;
+      bottom: 0;
       width: 100%;
       height: 4px;
     
@@ -86,25 +146,47 @@
 
   //* Contact nav */
   .contact-nav {
-    // display: flex;
-    // display: inline;
-    // margin-left: auto;
+    display: inline;
+    margin-left: auto;
     padding-inline-start: 0;
+
+    @media screen and (min-width: 1200px){
+      display: flex;     
+    }
   }
   .contact-nav__item {
-    // margin-right: 50px;
+    margin-bottom: 10px;
 
-    &:last-child {
-      // margin-right: 0px;
+    &:nth-last-child(-n+1) {
+      margin-bottom: 0;
+    }
+    @media screen and (min-width:1200px){
+      margin-right: 30px;
+      margin-bottom: 0;
+        
+        &:nth-last-child(-n+1) {
+          margin-right: 0;
+        }
     }
   }
   .contact-nav__link {
     display: flex;
     align-items: center;
+    
     color: $auxiliary-text-color;
   
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 18px;
+    line-height: 1.16;
+    
+
+    @media screen and (min-width: 768px){
+      font-size: 12px;
+      line-height: 1.16;
+    }
+    @media screen and (min-width: 1200px){
+      font-size: 14px;
+      line-height: 1.14;
+    }
     font-weight: 500;
     letter-spacing: 0.02em;
   
