--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -23,6 +23,7 @@ body {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
   }
   p {
