--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,11 +1,13 @@
 //* HEADER */
 .navigation {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-top: 10px;
   padding-bottom: 10px;
-  
+  border-bottom: 1px solid rgb(236, 236, 236);  
+
   @media screen and (min-width: 768px) {
     padding-top: 20px;
     padding-bottom: 21px;
@@ -35,24 +37,6 @@
   }
   
   //* Site nav */
-  .menu-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgb(236, 236, 236);
-
-    @media screen and (min-width: 768px) {
-      padding-top: 20px;
-      padding-bottom: 20px;
-    }
-
-    @media screen and (min-width: 1200px) {
-      padding-top: 24px;
-      padding-bottom: 24px;
-    }
-  }
   .menu-button{
     display: inline-flex;
     margin: 0;
@@ -80,37 +64,74 @@
       display: none;
     }
   }
-  .navigation-adaptive {
-    display: none;
-    align-items: center;
-    
+  .menu-container{
+    background-color: $additional-color;
+    text-align: center;
+    font-size: 20px;
+
+    @media screen and (max-width: 767px){
+      display:none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      padding-top: 60px;
+      padding-bottom: 60px;
+
+      &.is-open {
+        display: block;
+      }
+    }
     @media screen and (min-width: 768px) {
       display: flex;
+      align-items: center;
       justify-content: space-between;
     }
   }
   .site-nav {
     display: flex;
-    margin-left: 88px;
-    margin-right: 84px;
-    
+    align-items: center;
+    justify-content: space-between;
+
+    @media screen and (min-width: 480px) and (max-width: 767px){
+      display: block;  
+    }
+     @media screen and (min-width: 768px){
+      margin-left: 88px;
+      margin-right: 84px;     
+    }
     @media screen and (min-width: 1200px){
       margin-left: 93px;
       margin-right: 305px;     
     }
   }
   .site-nav__item {
-    margin-right: 50px;
+    margin-right: 0px;
 
-    &:last-child {
-      margin-right: 0px;
+    @media screen and (max-width: 767px){
+      margin-bottom: 40px;
+
+      &:last-child{
+        margin-bottom: 60px;
+      }
     }
+
+    @media screen and (min-width: 768px){
+      margin-right: 50px;   
+      
+      &:last-child {
+        margin-right: 0px;
+      }
+    }
+
   }
   .site-nav__link {
     position: relative;
-    padding-top: 32px;
-    padding-bottom: 32px;
   
+    @media screen and (max-width: 767px){
+      padding-bottom: 8px;
+    }
+
     color: $main-text-color;
   
     font-family: $main-font;
@@ -119,6 +140,8 @@
     line-height: 1.16;
 
     @media screen and (min-width: 768px){
+      padding-top: 32px;
+    padding-bottom: 32px;
       font-family: $main-font;
       font-size: 14px;
       line-height: 1.14;    
@@ -155,12 +178,19 @@
 
   //* Contact nav */
   .contact-nav {
-    display: inline;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     margin-left: auto;
     padding-inline-start: 0;
 
-    @media screen and (min-width: 1200px){
-      display: flex;     
+    @media screen and (min-width: 768px){   
+      align-items: baseline; 
+    }
+
+    @media screen and (min-width: 1200px){  
+      flex-direction: row; 
     }
   }
   .contact-nav__item {
@@ -169,6 +199,11 @@
     &:nth-last-child(-n+1) {
       margin-bottom: 0;
     }
+
+    @media screen and (max-width: 767px){
+      margin-bottom: 16px;
+    }
+
     @media screen and (min-width:1200px){
       margin-right: 30px;
       margin-bottom: 0;
@@ -180,7 +215,7 @@
   }
   .contact-nav__link {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     
     color: $auxiliary-text-color;
   
