--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -2,9 +2,13 @@
 body {
     background-color: $additional-color;
     color: $main-text-color;
-  
     font-family: $main-font;
     letter-spacing: 0.03em;
+    padding-top: 61px;
+
+    @media screen (min-width:768px) {
+      padding-top: 0;
+    }
 
     &.modal-open {
       overflow: hidden;
