--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,13 +1,28 @@
 //* HEADER */
-.navigation {
-  position: relative;
+.page-header--unlimited {
+  background-color: $additional-color;
+
+  @media screen and (max-width: 767px){
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding-bottom: 61px;
+  }
+.header {
+  background-color: $additional-color;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid rgb(236, 236, 236);  
+  z-index: 10;
 
+  // @media screen and (max-width: 767px){
+  //   position: fixed;
+  //   top: 0;
+  //   width: 100%;
+  // }
   @media screen and (min-width: 768px) {
     padding-top: 20px;
     padding-bottom: 21px;
@@ -54,10 +69,12 @@
     &.is-open .icon-menu {
       display: none;
     }
+
     &:hover, &:focus {
       color: $accent-color;
       --color4: $accent-color;
       fill: $accent-color;
+      cursor: pointer;
     }
     
     @media screen and (min-width: 768px) {
@@ -68,6 +85,7 @@
     background-color: $additional-color;
     text-align: center;
     font-size: 20px;
+    z-index: 10;
 
     @media screen and (max-width: 767px){
       display:none;
@@ -77,6 +95,8 @@
       width: 100%;
       padding-top: 60px;
       padding-bottom: 60px;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16); 
+
 
       &.is-open {
         display: block;
@@ -221,6 +241,7 @@
   
     font-size: 18px;
     line-height: 1.16;
+    letter-spacing: 0.02em;
     
 
     @media screen and (min-width: 768px){
