--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,15 +1,9 @@
 //* HERO */
   .hero {
-    
-    
-    @media screen and (min-width: 480px) {
-      padding-top: 118px;
-      padding-bottom: 118px;}
-    // margin: 0 auto;
-
-  
+    display: block;
     text-align: center;
     justify-content: center;
+
     background-color: rgba(47, 48, 58, 0.8);
     background-image: linear-gradient(
         to right,
@@ -18,15 +12,21 @@
       ),
       url("../images/hero.jpg");
     max-width: 1600px;
+    
     @media screen and (min-width: 480px) {
-      height: 400px;
-    // width: var(--max-width);
+      padding-top: 118px;
+      padding-bottom: 118px;
     }
-    @media screen and (min-width: 768px) {
-    height: 600px;
-    width: var(--max-width);
+        
+    @media screen and (min-width: 1200px) {
+      padding-top: 200px;
+      padding-bottom: 200px;
+    }
   }
-  }
+  .menu-container.is-open .hero{
+      display: none;
+    }
+
   .hero__title {
     padding: 0;
   
@@ -42,7 +42,7 @@
       font-size: 26px;
       line-height: 1.62;
     }
-    @media screen and (min-width: 768px){
+    @media screen and (min-width: 1200px){
       font-size: 44px;
       line-height: 1.36;
     }
