--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -108,10 +108,14 @@
     padding-bottom: 15px;
     padding-left: 16px;
     height: 50px;
-    width: 450px;
+    width: 100%;
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
     
     @media screen and (min-width: 1200px) {
-      width: 358px;
+      max-width: 358px;
       margin-right: 12px;
     }
   
