--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,13 +1,7 @@
 //* HEADER */
 .page-header--unlimited {
-  background-color: $additional-color;
-
-  @media screen and (max-width: 767px){
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding-bottom: 61px;
-  }
+  // background-color: $additional-color;
+}
 .header {
   background-color: $additional-color;
   display: flex;
@@ -18,11 +12,17 @@
   border-bottom: 1px solid rgb(236, 236, 236);  
   z-index: 10;
 
-  // @media screen and (max-width: 767px){
-  //   position: fixed;
-  //   top: 0;
-  //   width: 100%;
-  // }
+  @media screen and (max-width: 479px) {
+    width: 100%;
+  }
+  @media screen and (max-width: 767px) {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    // width: 100%;
+  }
+
   @media screen and (min-width: 768px) {
     padding-top: 20px;
     padding-bottom: 21px;
@@ -161,7 +161,7 @@
 
     @media screen and (min-width: 768px){
       padding-top: 32px;
-    padding-bottom: 32px;
+      padding-bottom: 32px;
       font-family: $main-font;
       font-size: 14px;
       line-height: 1.14;    
